--- a/files/.myrc
+++ b/files/.myrc
@@ -2,7 +2,7 @@
 export GPG_TTY=/dev/ttys001
 gpg-connect-agent updatestartuptty /bye
 unset SSH_AGENT_PID
-export SSH_AUTH_SOCK=$HOME/.gnupg/S.gpg-agent.ssh
+export SSH_AUTH_SOCK="$HOME/.gnupg/S.gpg-agent.ssh"
 
 export NVM_DIR="$HOME/.nvm"
 [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"  # This loads nvm
